--- a/css/main.scss
+++ b/css/main.scss
@@ -1,52 +1,198 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
-@charset "utf-8";
+
+/* html5doctor.com Reset Stylesheet \\v1.6.1 \\ Last Updated: 2010-09-17 \\ http://richclarkdesign.com \\ @rich_clark */
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+  margin:0;
+  padding:0;
+  border:0;
+  outline:0;
+  font-size:100%;
+  vertical-align:baseline;
+  background:transparent;
+}
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section { display:block; }
+nav ul { list-style:none; }
+blockquote, q { quotes:none; }
+blockquote:before, blockquote:after,
+q:before, q:after { content:''; content:none; }
+a { margin:0; padding:0; font-size:100%; vertical-align:baseline; background:transparent; }
+ins { background-color:#ff9; color:#000; text-decoration:none; }
+mark { background-color:#ff9; color:#000; font-style:italic; font-weight:bold; }
+del { text-decoration: line-through; }
+abbr[title], dfn[title] { border-bottom:1px dotted; cursor:help; }
+/* tables still need cellspacing="0" in the markup */
+table { border-collapse:collapse; border-spacing:0; }
+hr { display:block; height:1px; border:0; border-top:1px solid #ccc; margin:1em 0; padding:0; }
+input, select { vertical-align:middle; }
 
 
-
-// Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
+/* =Global Base Typography 
+----------------------------------------------- */
+body, html {background: #ebf1ef url('/images/bg-tile.png') fixed repeat;}
+body, input, textarea, html {
+	color: #333;
+	font-family: 'Cantarell', sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14px; 
+	line-height: 22px;
+}
+select, input, textarea, button {
+    font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+	line-height: 18px;}
+pre, code, kbd, samp  {font-family: monospace, sans-serif;}
 
 
+/* =Global base colours
+----------------------------------------------- */
+::selection {
+	background: #FF4B33; /* Safari */
+	color: #fff;
+	}
+::-moz-selection {
+	background: #FF4B33; /* Firefox */
+	color: #fff;
+	}
 
-// Using media queries with like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+iframe {border: none; overflow: hidden;}
+.red {color: #b72b2b;}
+.orange {color: #AE0000;}
+
+/* =Global structure
+----------------------------------------------- */
+
+h1, h2, h3, h4, h5, h6 {
+font-family: 'Syncopate', sans-serif;
+}
+h1 {
+	color: #0081c6;
+	font-size: 58px; 
+	line-height: 72px;
+	padding-top: 4px;
+	text-align: center;
+}
+
+#header {
+	background: url('/images/budokan-header.jpg') no-repeat;
+	display: block;
+	height: 298px;
+	width: 684px;
+}
+#wrapper {
+	background: #fff;
+	-webkit-box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.5);
+	-moz-box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.5);
+	box-shadow: 0px 0px 13px rgba(50, 50, 50, 0.5);
+	margin: 6px auto;
+	width: 684px;
+}
+#slideshow {
+	float: right;
+	margin-left: 23px;
+	width: 136px;
+}
+#slideshow img {
+	margin-bottom: 6px;
 }
 
 
+/* =Content
+----------------------------------------------- */
+#content p {
+	margin-bottom: 16px;
+}
+#content p.first {margin-right: 23px;}
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+#content {
+	padding: 0 23px 12px 23px;
+}
+.introduction {
+	background: #DAE5E2;
+	color: #0081C6;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	width: 144px;
+	float: right;
+	font-size: 15px;
+	padding: 2px 6px;
+	margin-left: 23px;
+	line-height: 28px;
+	max-height: 400px;
+	height: 400px;
+	}
+.main-text {
+
+}
+
+/* =Table
+----------------------------------------------- */
+table {
+	background: #efefef; 
+	border-radius: 12px;
+	-moz-border-radius: 12px;
+	-webkit-border-radius: 12px;
+	display: block;
+	padding: 12px; 
+	margin-bottom: 23px;
+}
+tbody {padding: 12px;}
+tr {padding: 12px;}
+td {}
+
+
+/* =images
+----------------------------------------------- */
+
+img {
+	height:auto;
+	max-width:97.5%;
+	width:auto;
+	margin-bottom: 23px;
+}
+img.alignleft {/*margin-right: 23px;*/}
+img.alignright {/*margin-left: 23px;*/}
+
+/* =alignment
+----------------------------------------------- */
+
+.alignleft {float: left;}
+.alignright {float: right;}
+.aligncenter {margin: 0 auto;}
+.expander {clear: both;}
+
+
+
+/* =Mobile devices
+----------------------------------------------- */
+
+@media screen and (max-width: 684px) {
+  #header {width: 100%;}
+  #wrapper {width: 100%;}
+  #content {width: 100%;}
+  #main-text {float: left;}
+  .introduction {margin: 0; float: left; width: 90%; height: auto;}
+  #slideshow {display: none;}
+  table, tr {width: 90%;}
+  td {width: 45%}
+  img {float: left;}
+  p {margin: 6px;clear: both;}
+  iframe {width: 80%}
+}
+@media screen and (max-width: 400px) {
+#content {padding: 12px 6px;}
+img {display: none;}
+.introduction {margin: 0; float: left; width: 90%; height: auto;}
+ p {float: left; width: 90%; margin: 0;}
+  iframe {width: 80%}
+}
