--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
       ga('send', 'pageview');
 
     </script>
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script>
       $(document).ready(function() {
         var menuToggle = $('#js-centered-navigation-mobile-menu').unbind();
