--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,11 +16,11 @@
     <ul>
       <li><h3>Contact</h3></li>
       <li>Alan Hoverd</li>
-      <li>(04) 389 6121</li>
+      <li>(06) 362 6459</li>
       <li><a href="mailto:alan.hoverd@vuw.ac.nz">alan.hoverd@vuw.ac.nz</a></li>
-      <li>68 Liardet Street</li>
-      <li>Mornington</li>
-      <li>Wellington 6021</li>
+      <li>42 Manakau Heights Drive</li>
+      <li>RD3 Otaki</li>
+      <li>Wellington 5583</li>
     </ul>
   </div>
 
