--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
       <li><h3>Contact</h3></li>
       <li>Alan Hoverd</li>
       <li>(06) 362 6459</li>
-      <li><a href="mailto:alan.hoverd@vuw.ac.nz">alan.hoverd@vuw.ac.nz</a></li>
+      <li><a href="mailto:hoverdalan@gmail.com">hoverdalan@gmail.com</a></li>
       <li>42 Manakau Heights Drive</li>
       <li>RD3 Otaki</li>
       <li>Wellington 5583</li>
